# mobility-ros2-firebase

./: .gitignore  README.md  README_jp.md
.devcontainer/: devcontainer.json
archive/docker/: Dockerfile
archive/docker/rviz/: firebase_config.yaml
archive/legacy/launch/: multi_robot.launch.py  phase2_minimal.launch.py
archive/legacy/scripts/: coordinate_debug.py  test_multi_robot.sh
config/rviz/: firebase_config.yaml
docs/: README_current.md  README_current_jp.md  README_legacy.md  README_legacy_jp.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_firebase_bridge/local/lib/python3.10/dist-packages/ros2_firebase_bridge-0.0.1-py3.10.egg-info/: PKG-INFO
install/ros2_firebase_bridge/share/ament_index/resource_index/parent_prefix_path/: ros2_firebase_bridge
install/ros2_firebase_bridge/share/ros2_firebase_bridge/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_firebase_bridge/share/ros2_firebase_bridge/config/: firebase_config.yaml
install/ros2_firebase_bridge/share/ros2_firebase_bridge/launch/: multi_robot_firebase_bridge.launch.py  phase2_minimal.launch.py  yoto_campus_full.launch.py  yoto_campus_sim.launch.py
log/: latest_build
scripts/: build_and_run.sh  debug_dispatch_flow.py  debug_dispatch_system.sh  navigation_tester.py  phase2_validation_tests.py  start_single_robot.sh  test_firebase.py  test_infinite_loop.py  validate_dispatch_accuracy.py
src/ros2_firebase_bridge/: CMakeLists.txt  setup.py
src/ros2_firebase_bridge/config/: firebase_config.yaml  nav2_params.yaml
src/ros2_firebase_bridge/config/rviz/: firebase_config.yaml
src/ros2_firebase_bridge/install/: local_setup.sh  setup.sh
src/ros2_firebase_bridge/install/ros2_firebase_bridge/share/ros2_firebase_bridge/: package.bash  package.ps1  package.sh  package.xml  package.zsh
src/ros2_firebase_bridge/install/ros2_firebase_bridge/share/ros2_firebase_bridge/config/: firebase_config.yaml
src/ros2_firebase_bridge/install/ros2_firebase_bridge/share/ros2_firebase_bridge/launch/: yoto_campus_sim.launch.py
src/ros2_firebase_bridge/install/ros2_firebase_bridge/share/ros2_firebase_bridge/models/yoto_campus/: yoto7.dae
src/ros2_firebase_bridge/install/ros2_firebase_bridge/share/ros2_firebase_bridge/worlds/: yoto_campus.world
src/ros2_firebase_bridge/launch/: campus_test.launch.py  phase2_minimal.launch.py.backup  slam_mapping.launch.py  utsunomiya_campus.launch.py
src/ros2_firebase_bridge/launch/install/: local_setup.sh  setup.sh
src/ros2_firebase_bridge/launch/log/: latest_build
src/ros2_firebase_bridge/models/utsunomiya_campus/: model.config  model.sdf  utunomiya-yoto7.dae
src/ros2_firebase_bridge/models/yoto_campus/: yoto7.dae
src/ros2_firebase_bridge/ros2_firebase_bridge/: coordinate_converter.py  firebase_bridge_node.py  firebase_client.py  state_publisher.py
src/ros2_firebase_bridge/scripts/: firebase_bridge  firebase_bridge_multi  simple_goal_navigator
src/ros2_firebase_bridge/worlds/: lightweight_gazebo.world  phase2_minimal.world  utsunomiya_campus.world  yoto_campus.world  yoto_campus_simple.world
